# IIL

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FLOWCHART.mmd  README.md  SECURITY.MD  grammar.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  security-issue.md
.github/workflows/: clang-format.yml
.github/workflows/ISSUE_TEMPLATE/: bug_report.yml  config.yml
docs/: SYNTAX.MD
docs/grammar/: grammar.ebnf
include/IIL/lexer/: tokenization.hpp  tokens.hpp
include/IIL/lexer/errors/: lexerError.hpp
include/IIL/parser/: Expr.hpp  arena.hpp  parse.hpp  parsing.hpp
include/IIL/parser/ast/: ASTNode.hpp  ASTNodes.hpp
include/ILL/lexer/: lexerError.hpp  tokens.hpp
include/lexer/: lexerError.hpp  tokenization.hpp  tokens.hpp  utils.hpp
scripts/: build_repl.cmd  build_repl.sh  clang_format.cmd  clang_format.sh
src/: main.cpp
src/lexer/: tokenization.cpp  utils.cpp
src/lexer/include/: utils.hpp
src/lexer/include/utils/: isDelimiter.hpp  isNumber.hpp  isSkippable.hpp  shift.hpp
src/lexer/utils/: isDelimiter.cpp  isDelimiter.hpp  isNumber.cpp  isNumber.hpp  isSkippable.cpp  isSkippable.hpp  shift.cpp  shift.hpp
src/lexer/utils/include/: isDelimiter.hpp  isNumber.hpp  isSkippable.hpp  shift.hpp
src/parser/: AST.cpp  arena.cpp  parse.cpp  parsing.cpp  synchronization.cpp
src/parser/errors/: errorRoutines.cpp  parserError.cpp
src/parser/utils/: helperRoutines.cpp  helperRoutines.hpp
src/parser/utils/include/: helperRoutines.hpp
stdlib/REPL/: README.md
stdlib/REPL/src/: listener.cpp  main.cpp
tests/: lexer_test.cpp
